--- a/task-manager-domain/task-manager-domain-core/pom.xml
+++ b/task-manager-domain/task-manager-domain-core/pom.xml
@@ -19,5 +19,10 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
