implement data-access module
create Task jpa entity
implement save(), findById(), queryById() methods of TaskRepository port
use SQLite as DB

do integration test with SQLite

--- a/task-manager-data-access/pom.xml
+++ b/task-manager-data-access/pom.xml
@@ -34,6 +34,9 @@
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-community-dialects</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>github.muhsener01</groupId>
+            <artifactId>task-manager-domain-application</artifactId>
+        </dependency>
     </dependencies>
 </project>
