implement application-layer
add dependency for picocli library
create TaskManagerShell
create TaskManagementCommand
create AddTaskCommand

integrate picocli with spring boot in container module
test AddTaskCommand

--- a/task-manager-application/pom.xml
+++ b/task-manager-application/pom.xml
@@ -22,5 +22,10 @@
             <groupId>github.muhsener01</groupId>
             <artifactId>task-manager-domain-application</artifactId>
         </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli-spring-boot-starter</artifactId>
+            <version>4.7.6</version>
+        </dependency>
     </dependencies>
 </project>
