--- a/task-manager-container/pom.xml
+++ b/task-manager-container/pom.xml
@@ -39,16 +39,13 @@
     </dependencies>
 
     <build>
+        <finalName>task-manager-app</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.4.2</version>
-
             </plugin>
-
-
         </plugins>
     </build>
 </project>
